--- a/style.css
+++ b/style.css
@@ -35,6 +35,54 @@ body {
   padding: 5px;
 }
 
+/* Hero Home */
+.home-hero {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0;
+  padding: 150px 130px;
+  background-color: #10b253;
+}
+
+#greet-hero h1 {
+  font-weight: bold;
+  font-size: 40px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  color: #ffffff;
+}
+
+#greet-hero p {
+  font-size: large;
+  margin-right: 10px;
+  color: #ffffff;
+}
+
+#img-hero {
+  position: static;
+  width: 450px;
+  border-radius: 8px;
+}
+
+#button-hero button {
+  font-family: "Poppins", sans-serif;
+  padding: 10px 45px;
+  color: #10b253;
+  background-color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  word-spacing: 3px;
+  font-size: large;
+  font-weight: bold;
+}
+
+#button-hero button:hover {
+  background-color: #d7ffe3;
+  font-weight: bold;
+  cursor: pointer;
+}
+
 /* Footer */
 footer .footer {
   display: flex;
