--- a/style.css
+++ b/style.css
@@ -111,6 +111,36 @@ body {
   border: 20px solid #10b253;
 }
 
+/* Hero Page 3 Track Calories */
+.track-calories {
+  padding: 150px 130px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0;
+  background-color: #10b253;
+}
+
+#calories h2 {
+  font-weight: bold;
+  font-size: 40px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  color: #ffffff;
+}
+
+#calories p {
+  font-size: large;
+  margin-right: 10px;
+  color: #ffffff;
+}
+
+#img-calories {
+  position: static;
+  width: 450px;
+  border-radius: 8px;
+}
+
 /* Footer */
 footer .footer {
   display: flex;
