--- a/style.css
+++ b/style.css
@@ -188,6 +188,88 @@ body {
   border: 20px solid #10b253;
 }
 
+/* Style Page Article */
+.article {
+  padding: 50px 100px;
+  background-color: #f2fffa;
+}
+
+article h1 {
+  font-weight: bold;
+}
+
+#tanggal-artikel {
+  font-style: italic;
+  font-size: 12px;
+  color: #999;
+}
+
+#img-article img {
+  display: block;
+  margin: 0 auto;
+  border: 20px solid #10b253;
+}
+
+article h5 {
+  padding-top: 10px;
+  font-weight: bold;
+}
+
+article p {
+  font-weight: 500;
+  text-align: justify;
+}
+
+.section-tracking {
+  background-color: #f2fffa;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 50px;
+}
+
+.tracking {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-width: 700px;
+}
+
+.tracking img {
+  border: 8px solid #10b253;
+}
+
+#tracking-calories,
+#tracking-bmi2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+#tracking-calories img,
+#tracking-bmi2 img {
+  width: 200px;
+  height: auto;
+  margin-bottom: 20px;
+}
+
+#button-bmi2 button {
+  background-color: #10b253;
+  color: white;
+  margin-top: 8px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+#button-bmi2 button:hover {
+  opacity: 0.8;
+}
+
 /* Footer */
 footer .footer {
   display: flex;
