--- a/style.css
+++ b/style.css
@@ -270,6 +270,26 @@ article p {
   opacity: 0.8;
 }
 
+/* Scrool To Top */
+#scroll-to-top-btn {
+  position: fixed;
+  display: none;
+  bottom: 20px;
+  right: 20px;
+  background-color: #fff;
+  color: #000;
+  border: 1px solid #000;
+  padding: 5px;
+  border-radius: 50%;
+  z-index: 99;
+  cursor: pointer;
+}
+
+#scroll-to-top-btn:after {
+  content: "\2191";
+  font-size: 35px;
+}
+
 /* Footer */
 footer .footer {
   display: flex;
